# echobot

./: .gitignore  README.md  config.toml  echobot.cabal  stack.yaml
app/: Main.hs
src/: Echobot.hs  Prelude.hs
src/Echobot/: Config.hs  Db.hs  Log.hs  Run.hs  Runner.hs
src/Echobot/App/: Env.hs  Monad.hs
src/Echobot/Bots/: Irc.hs  Matrix.hs  Mattermost.hs  Telegram.hs  Xmpp.hs
src/Echobot/Bots/Matrix/: Types.hs
src/Echobot/Bots/Telegram/: Types.hs
src/Echobot/Connectors/: Handle.hs  Irc.hs  Mattermost.hs  Xmpp.hs
src/Echobot/Core/: Bot.hs  Dflts.hs  Irc.hs  Matrix.hs  Mattermost.hs  Msgs.hs  Telegram.hs  ToConnect.hs  Users.hs  Xmpp.hs
src/Echobot/Types/: Bot.hs  Dflts.hs  Irc.hs  Matrix.hs  Mattermost.hs  Msgs.hs  Severity.hs  Telegram.hs  ToConnect.hs  User.hs  Users.hs  Xmpp.hs
