cabal-version:       3.0
name:                echobot
version:             0.0.0.0
synopsis:            a chat bot for IRC/Matrix/Mattermost/Telegram/XMPP
description:         a chat bot for IRC/Matrix/Mattermost/Telegram/XMPP
license:             AGPL-3.0-only
license-file:        LICENSE
author:              lincot
category:            Network
build-type:          Simple
extra-doc-files:     README.md

common common-options
  build-depends:       base-noprelude
                     , relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists

  default-language:    Haskell2010
  default-extensions:  DataKinds
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , GeneralizedNewtypeDeriving
                     , LambdaCase
                     , MultiWayIf
                     , OverloadedStrings
                     , PatternSynonyms
                     , StandaloneDeriving
                     , TypeApplications
                     , ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Echobot
                       Prelude
  other-modules:       Echobot.App.Env
                       Echobot.App.Monad
                       Echobot.Bots.Irc
                       Echobot.Bots.Matrix
                       Echobot.Bots.Matrix.Types
                       Echobot.Bots.Mattermost
                       Echobot.Bots.Telegram
                       Echobot.Bots.Telegram.Types
                       Echobot.Bots.Xmpp
                       Echobot.Config
                       Echobot.Connectors.Handle
                       Echobot.Connectors.Irc
                       Echobot.Connectors.Mattermost
                       Echobot.Connectors.Xmpp
                       Echobot.Db
                       Echobot.Log
                       Echobot.Runner
                       Echobot.Types.Bot
                       Echobot.Types.Dflts
                       Echobot.Types.Irc
                       Echobot.Types.Matrix
                       Echobot.Types.Mattermost
                       Echobot.Types.Msgs
                       Echobot.Types.Severity
                       Echobot.Types.Telegram
                       Echobot.Types.ToConnect
                       Echobot.Types.Users
                       Echobot.Types.Xmpp
  build-depends:       text
                     , time
                     , tomland
                     , unordered-containers
                     , unliftio
                     , unliftio-core
                     , network
                     , aeson
                     , req
                     , data-default
                     , pontarius-xmpp
                     , mattermost-api

executable echobot
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       echobot
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
